Import of LINDNER/HTML-Clean-0.8 from CPAN.
gitpan-cpan-distribution: HTML-Clean
gitpan-cpan-version:      0.8
gitpan-cpan-path:         LINDNER/HTML-Clean-0.8.tar.gz
gitpan-cpan-author:       LINDNER
gitpan-cpan-maturity:     released

--- a/t/testpages/hairy.html
+++ b/t/testpages/hairy.html
@@ -41,5 +41,12 @@ An image without an alt tag.
 <br>
 <br>
 Voil&aacute;
+<!-- test case from Renzo -->
+<area shape=rect coords="17,6,83,36" target=_top href="http://home/"
+ onmouseover="window.status='HOME';return true;">
+<!-- test case from Gregory Stark  shouldn't remove space there.. -->
+<img src="foo > bar">
+<!-- test case from Jens Quade -->
+<b>test me <br ></b>
 </body>
 
